<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fun with flags!</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="buttonFlags">Flags</string>
    <string name="stackColor">Medium</string>
    <string name="NorwayFlag">Norway Flag</string>
    <string name="italy">Italy Flag</string>
    <string name="uber">Uber</string>

    <color name="white">#FFFFFF</color>
    <color name="bright_pink">#FF007F</color>
    <color name="red">#FF0000</color>
    <color name="orange">#FF7F00</color>
    <color name="yellow">#FFFF00</color>
    <color name="chartreuse">#7FFF00</color>
    <color name="green">#228B22</color>
    <color name="spring_green">#00FF7F</color>
    <color name="azure">#007FFF</color>
    <color name="blue">#0000FF</color>
    <color name="violet">#7F00FF</color>
    <color name="magenta">#FF00FF</color>
    <color name="black">#000000</color>

    <array name="russia">
        <item>@color/white</item>
        <item>@color/blue</item>
        <item>@color/red</item>
    </array>
    <array name="austria">
        <item>@color/red</item>
        <item>@color/white</item>
        <item>@color/red</item>
    </array>
    <array name="germany">
        <item>@color/black</item>
        <item>@color/red</item>
        <item>@color/yellow</item>
    </array>
    <array name="spain">
        <item>@color/red</item>
        <item>@color/yellow</item>
        <item>@color/red</item>
    </array>
    <array name="luxembourg">
        <item>@color/red</item>
        <item>@color/white</item>
        <item>@color/azure</item>
    </array>
    <array name="holland">
        <item>@color/red</item>
        <item>@color/white</item>
        <item>@color/blue</item>
    </array>
    <array name="armenia">
        <item>@color/red</item>
        <item>@color/blue</item>
        <item>@color/green</item>
    </array>
    <array name="estonia">
        <item>@color/blue</item>
        <item>@color/black</item>
        <item>@color/white</item>
    </array>
    <array name="serbia">
        <item>@color/red</item>
        <item>@color/blue</item>
        <item>@color/white</item>
    </array>
    <array name="belarus">
        <item>@color/red</item>
        <item>@color/red</item>
        <item>@color/green</item>
    </array>
    <array name="bulgaria">
        <item>@color/white</item>
        <item>@color/green</item>
        <item>@color/red</item>
    </array>

    <string name="title_activity_flags">Flags</string>
    <string name="title_activity_medium">Medium</string>
    <string name="title_activity_norway">Norway</string>
    <string name="title_activity_italy_flag">ItalyFlag</string>
    <string name="title_activity_uber">Uber</string>

</resources>
