<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MyActivity"
    android:orientation="vertical"
    android:background="@drawable/ic_launcher">

    <Button android:id="@+id/flags"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonFlags"/>

    <Button android:id="@+id/medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stackColor"/>
    <Button android:id="@+id/norway"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NorwayFlag"/>
    <Button android:id="@+id/italy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/italy"/>
    <Button android:id="@+id/uber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uber"/>


</LinearLayout>
